# videas

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entry.sh  fly.toml  write_entry.sh
bash/: metadata.sh
migrations/2024-02-11-150721_create_posts/: up.sql
migrations/2024-02-21-213608_add_slug_to_posts/: down.sql  up.sql
migrations/2024-03-09-162223_add_tags_to_posts/: down.sql  up.sql
migrations/2024-03-09-174811_add_description_to_post/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/db/: mod.rs  models.rs  schema.rs
src/filters/: mod.rs
src/posts/: mod.rs
src/routes/: mod.rs
src/utils/: mod.rs
static/: styles.css
templates/: 404.html  base.html  head_base.html  index.html
templates/config/: bio.html  header_links.html  logo.html  picture.html
templates/posts/: _post_card.html  _post_head.html  show.html
tests/: mod.rs
tests/bash/: metadata_test.sh  runAll.sh
tests/bash/fixtures/: entry.md
