[package]
name = "videas"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = "4"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
env_logger = "0.11.1"
log = "0.4.0"
markdown = "1.0.0-alpha.16"
